# keren

./: .gitignore  CMakeLists.txt  LICENSE  README.md  package-lock.json
cmake/: FindDeps.cmake
contracts/: compiler.sage
docs/: COMPILER.md  COMPILER_README.md  SIMULATOR.md  VISUALIZER.md
examples/: gpt2.mlir  gpt2_inputs.json  mini_attention.mlir
include/keren/: Compiler.h  DialectHandler.h  Fusion.h  Interpreter.h  LinalgHandler.h  OpLowering.h  Pipeline.h  StableHLOHandler.h  TensorValue.h
include/keren/Lowerings/: ContractionOps.h  ElementwiseOps.h  ReductionOps.h
lib/: CMakeLists.txt  Compiler.cpp  Fusion.cpp  Interpreter.cpp  LinalgHandler.cpp  OpLowering.cpp  Pipeline.cpp  StableHLOHandler.cpp  TensorValue.cpp
lib/Lowerings/: ContractionOps.cpp  ElementwiseOps.cpp  ReductionOps.cpp
scripts/: export_gpt2_stablehlo.py  gen_gpt2_inputs.py
test/: CMakeLists.txt  lit.cfg.py
test/compiler/: elementwise.mlir  fusion.mlir  matmul.mlir
test/stablehlo/: add.mlir  dot_general.mlir  multiply.mlir
tools/: CMakeLists.txt  keren-compile.cpp  keren-sim.cpp  trace-to-json.py
visualizer/: examples  index.html  server.py
visualizer/css/: style.css
visualizer/js/: app.js  detail-panel.js  graph-renderer.js  mlir-parser.js
